--- a/data/tickets.yaml
+++ b/data/tickets.yaml
@@ -13,7 +13,7 @@ tickets:
     icon: "i"
   - 
     title: Video Access
-    blurb: The training event will be livestreamed and recorded by media professionals. Afterward, multimedia and written content will be edited and distributed CC-BY-SA and, all trainees will be supported in their experimentation with the newly learned methods by gaining invitation to the global g0v community Slack group.
+    blurb: The training event will be livestreamed and recorded by media professionals. Afterward, multimedia and written content will be edited and distributed CC-BY-SA.
     icon: "i"
   - 
     title: Evening Reception
